Fixed some bugs in the migration of expert mode to templatecodes. Had to adjust for same code word used for lists as individual items. Now appears to work okay.

--- a/com_biblestudy/admin/help/en-GB/templatecodehelp.html
+++ b/com_biblestudy/admin/help/en-GB/templatecodehelp.html
@@ -250,7 +250,7 @@ and open the template in the editor.
         </tr>
         <tr>
             <td>Study Text</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo  $this->study->studytext;"/></td>
+            <td><input type="text" size="75" onClick="this.select();" value="echo  $this->item->studytext;"/></td>
         </tr>
         <tr>
             <td>Main Reference Passage</td>
