Removed expert mode from module

--- a/com_biblestudy/admin/help/en-GB/templatecodehelp.html
+++ b/com_biblestudy/admin/help/en-GB/templatecodehelp.html
@@ -495,7 +495,7 @@ and open the template in the editor.
         <tr>
             <td>Sample Code</td>
             <td><textarea cols="50" rows="10" onClick="this.select();">
-                foreach ($studies as $study){echo $study->studyintro.'<br/>';}</textarea></td>
+                foreach ($list as $study){echo $study->studyintro.'<br/>';}</textarea></td>
         </tr>
     </table>
 </div>
