--- a/admin/help/en-GB/biblestudy.html
+++ b/admin/help/en-GB/biblestudy.html
@@ -1,8 +1,8 @@
 <div class="header">Proclaim Help Screen</div>
 <p>All help has been moved to our documentation site:
 <p>
-    <a href="https://www.joomlabiblestudy.org/jbs-documentation/user-guides.html" target="_blank">Find
+    <a href="https://www.christianwebministries.org/jbs-documentation/user-guides.html" target="_blank">Find
         answers here</a><br> <a
-        href="https://www.joomlabiblestudy.org/forum.html" target="_blank">Also
+        href="https://www.christianwebministries.org/forum.html" target="_blank">Also
     visit our forum</a>
 </p>
