Trying to fix itemid issue. This didn't work but we should put links in a Route function anyway

--- a/admin/help/en-GB/templatecodehelp.html
+++ b/admin/help/en-GB/templatecodehelp.html
@@ -177,48 +177,8 @@ and open the template in the editor.
             <td><input type="text" size="75" onClick="this.select();" value="echo $this->params->get('list_intro');"/></td>
         </tr>
         <tr>
-            <td>Popular Study Drop Down</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->popular;"/></td>
-        </tr>
-        <tr>
-            <td>Go Button</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->gobutton;"/></td>
-        </tr>
-        <tr>
-            <td>Teachers Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->teachers;"/></td>
-        </tr>
-        <tr>
-            <td>Series Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->series;"/></td>
-        </tr>
-        <tr>
-            <td>Message Types Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->messagetypes;"/></td>
-        </tr>
-        <tr>
-            <td>Years Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->years;"/></td>
-        </tr>
-        <tr>
-            <td>Locations Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo  $this->page->locations;"/></td>
-        </tr>
-        <tr>
-            <td>Topics Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo  $this->page->topics;"/></td>
-        </tr>
-        <tr>
-            <td>Books Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo  $this->page->books;"/></td>
-        </tr>
-        <tr>
-            <td>Languages Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->languages;"/></td>
-        </tr>
-        <tr>
-            <td>Order (Asc, Desc) Dropdown</td>
-            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->order;"/></td>
+            <td>Search Tools</td>
+            <td><input type="text" size="75" onClick="this.select();" value="echo $this->page->searchtools;"/></td>
         </tr>
         <tr>
             <td>Pagination links</td>
