--- a/admin/help/en-GB/proclaim.html
+++ b/admin/help/en-GB/proclaim.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Proclaim Help</title>
+</head>
+<body>
 <div class="header">Proclaim Help Screen</div>
 <p>All help has been moved to our documentation site:
 <p>
@@ -6,3 +13,5 @@
         href="https://www.christianwebministries.org/forum.html" target="_blank">Also
     visit our forum</a>
 </p>
+</body>
+</html>
